<resources>
    <string name="app_name">KryptoParser</string>
    <string name="list_view_name">Lista kryptowalut</string>
    <string name="lowPrice">Low price:</string>
    <string name="highPrice">High price:</string>
    <string name="openPrice">Open price:</string>
    <string name="closePrice">Close price:</string>
    <string name="noCurrencyException">Sorry, no data about this currency</string>
    <string name="calculator">Calculator</string>
    <string name="about">About authors</string>
    <string name="last_24h_period">Last 24h data:</string>
    <string name="currencyName">name</string>
    <string name="currencySymbol">symbol</string>
    <string name="currencyPriceUSD">price_usd</string>
    <string name="currency_change_in_time">Percent price change in:</string>
    <string name="percent_change_1h">percent_change_1h:</string>
    <string name="percent_change_24h">percent_change_24h:</string>
    <string name="percent_change_7d">percent_change_7d:</string>
    <string name="hp">High price:</string>
    <string name="wallet">Wallet</string>
    <string name="from_calculator">Type currency From</string>
    <string name="to_calculator">Type currency To</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search currencies</string>
    <string name="calculator_warning">Both parameters are required</string>
    <string name="chartDataInfo">All prices are comparised to Bitcoin</string>
    <string name="progressDialogMSG">Please wait</string>
    <string name="waitMessage">Please wait</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="get_exchange_rate">Get exchange rate</string>
    <string name="total_received_btc">Total received:</string>
    <string name="total_sent_btc">Total sent:</string>
    <string name="final_balance_btc">Final balance:</string>
    <string name="number_of_transactions">Number of transactions:</string>
    <string name="address">Address:</string>
    <string name="addres_warning">Check if you typed correct address and try again</string>
    <string name="no_exchange_data_info">Sorry, no data about this pair</string>
    <string name="calc_quantity">quantity</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="calculate">Calculate</string>
    <string name="result">result</string>
    <string name="show_history_as_chart">show history as chart</string>
    <string name="disclaimer">Application created as an assignment of \'Mobile Systems Programming\' subject on University of Economics in Cracow</string>

    <string-array name="real_currencies">
        <item>pln</item>
        <item>usd</item>
        <item>eur</item>
        <item>gbp</item>
        <item>rur</item>
    </string-array>

</resources>
